--- a/templates/ca-1-two-tier.yaml
+++ b/templates/ca-1-two-tier.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: This template creates 2 Windows 2019 Server Active Directory Ceritificate Services
   CAs 1 Offline Root CA and 1 Enterprise Subordinate CA into a private subnet inside a VPC. 
-  **WARNING** This template creates Amazon EC2 Windows instance and related resources. 
+  WARNING This template creates Amazon EC2 Windows instance and related resources. 
   You will be billed for the AWS resources used if you create a stack from this template. (qs-1qup6rae5)
 Metadata:
   AWS::CloudFormation::Interface:
@@ -115,7 +115,7 @@ Parameters:
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
     Description: CIDR Block for the VPC
     Type: String
-    Default: 10.0.0.0/16
+    Default: 11.0.0.0/16
   VPCID:
     Description: ID of the VPC (e.g., vpc-0343606e)
     Type: AWS::EC2::VPC::Id
@@ -130,13 +130,14 @@ Parameters:
     Type: AWS::EC2::SecurityGroup::Id
   OrCaServerInstanceType:
     AllowedValues:
+      - t2.micro
       - t2.small
       - t3.small
       - t2.medium
       - t3.medium
       - t2.large
       - t3.large
-    Default: t3.medium
+    Default: t2.micro
     Description: Amazon EC2 instance type for the Offline Root CA instance
     Type: String
   OrCaDataDriveSizeGiB:
@@ -145,13 +146,14 @@ Parameters:
     Description: Size of the Offline Root CA Data Drive in GiB
   SubCaServerInstanceType:
     AllowedValues:
+      - t2.micro
       - t2.small
       - t3.small
       - t2.medium
       - t3.medium
       - t2.large
       - t3.large
-    Default: t3.medium
+    Default: t2.micro
     Description: Amazon EC2 instance type for the Subordinate CA instance
     Type: String
   SubCaDataDriveSizeGiB:
@@ -265,13 +267,13 @@ Parameters:
     ConstraintDescription: Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
-    Default: aws-quickstart
+    Default: aherrera116
     Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
       can include numbers, lowercase letters, uppercase letters, and hyphens (-).
       It cannot start or end with a hyphen (-).
     Type: String
   QSS3BucketRegion:
-    Default: us-east-1
+    Default: us-west-1
     Description: The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value.
     Type: String
   QSS3KeyPrefix:
@@ -300,7 +302,7 @@ Rules:
       - AssertDescription: CRL BucketName cannot must be valid BucketName
         Assert: !Not [!Equals [!Ref S3CRLBucketName, 'examplebucket']]
 Conditions:
-  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
+  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aherrera116']
   UsingS3BucketForCrl: !Equals [!Ref UseS3ForCRL, 'Yes']
 Resources:
   InstanceRole:
