--- a/templates/ad-1.yaml
+++ b/templates/ad-1.yaml
@@ -502,7 +502,7 @@ Resources:
             description: "Stack Name Input for cfn resource signal"
             type: "String"
           URLSuffix:
-            default: "amazonaws.com" # github.com
+            default: "github.com" # github.com
             description: "AWS URL suffix"
             type: "String"
         mainSteps:
